# PrecisionCheck

./: README.md
libs/boost_matheval/src/qi/: CMakeLists.txt
libs/boost_matheval/src/x3/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
